--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,35 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
+  padding: 20px 20px 0 20px;
   display: flex;
   flex-direction: column;
+  flex: 1;
+  background-color: #f0f2f5;
+}
+
+.headerLink {
+  margin-right: 20px;
+}
+
+.mainHeader {
+  display: flex;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.paragraph {
+  font-size: 22px;
+  text-align: justify;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.image {
+  width: 100%;
+  margin-bottom: 22px;
+}
+
+.allergenImageWrapper {
+  text-align: center;
+  margin-bottom: 22px;
+}
+.allergenImage {
+  width: 65%;
 }
