--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -11,22 +11,51 @@
     margin: 20px 10px 0 20px;
 }
 
-.card h3 {
-    font-size: x-large;
+.card h3 a{
+    color: #000000;
+    font-size: large;
     padding: 10px 10px;
-    border-bottom: 1px solid rgb(218, 218, 218);;
+    text-decoration: none;
+}
+
+.card h3 {
+    line-height: 20px;
 }
 
 .card span {
     padding: 0px 10px 5px 10px;
+    font-size: 12px;
 }
 
 .card a {
     padding: 5px 20px 5px 5px;
     text-decoration: none;
     text-align: right;
+    font-size: 12px;
+}
+
+.card__ul {
+    display: flex;
+    flex-wrap: wrap;
+    font-size: 12px;
+}
+
+.card__li {
+    position: relative;
+    margin-right: 30px;
+    padding: 0;
+}
+
+.card__info {
+    display: flex;
+    flex-wrap: wrap;
+    font-size: 12px;
+}
+
+.card__info span{
+    padding: 0px 0px 5px 10px;
 }
 
 .card:hover {
-    border: 3px solid rgb(108, 110, 243);
+    box-shadow: 5px 5px 5px rgb(108, 110, 243);
 }
