--- a/src/routes/Search/Search.css
+++ b/src/routes/Search/Search.css
@@ -1,4 +1,5 @@
 .contain {
+    font-family: Roboto, 'Helvetica Neue', Arial, sans-serif;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -7,13 +8,13 @@
     margin-right: 10%;
     background-color: #ffffff;
     margin-top: 20px;
+    min-width: 900px;
 }
 
 .block-left {
     float: left;
     width: 30%;
     border-radius: 0%;
-    background-color: rgb(228, 247, 228);
     margin-left: 10px;
 }
 
@@ -29,11 +30,12 @@
 .block-right {
     float: right;
     width: 68%;
-    border-left: 1px solid rgb(2, 2, 2);;
+    border-left: 1px solid rgb(2, 2, 2);
 }
 
 .block-right h2{
     text-align: center;
+    font-size: large;
 }
 
 .st-button {
@@ -45,6 +47,7 @@
     cursor: pointer;
     width: 25%; 
     height: 30px;
+    min-width: 80px;
 }
 
 .st-button:hover {
