--- a/src/routes/Testing/index.css
+++ b/src/routes/Testing/index.css
@@ -2,8 +2,9 @@
   height: 32px;
   margin: 16px;
   background: #ffffff;
-  font-weight: bold;
   text-align: center;
+  color: rgb(24 144 255); 
+  font-size: 20px;
 }
 
 .site-layout-sub-header-background {
